using Entities.Models;

namespace Contracts.Interfaces
{
    public interface IMemberRepository : IRepositoryBase<Member>
    {
    }
}
